# taskforge

./: README.md  config_sample.yml  requirements.txt  setup.cfg
taskforge/: __init__.py  config.py  persist.py  plugin.py
taskforge/commands/: __init__.py  all.py  run.py
taskforge/plugins/: bugwarrior.py  shorten.py
