[metadata]
name = taskgears
author = Ryan S. Brown
author-email = sb@ryansb.com
summary = Plugin-friendly system for interacting with taskwarrior tasks
description-file = README.md
license = MIT
zip_safe = false
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    taskwarrior
    todo
    tasks
[files]
packages =
    taskgears
