[metadata]
name = taskforge
author = Ryan S. Brown
author-email = sb@ryansb.com
home-page = "http://github.com/ryansb/taskgears"
summary = Plugin-friendly workflow system for interacting with taskwarrior tasks
description-file = README.md
license = AGPLv3
zip_safe = false
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    taskwarrior
    todo
    tasks
[files]
packages =
    taskforge
    taskforge.commands
    taskforge.plugins
[entry_points]
console_scripts =
    taskforge = taskforge:cli
taskforge.commands =
    run = taskforge.commands.run:Run
